fix affixes / spacings

--- a/pybossa/static/css/styles.css
+++ b/pybossa/static/css/styles.css
@@ -129,7 +129,7 @@ html {
   overflow-x: hidden;
 }
 body {
-  padding-top: 100px;
+  padding-top: 123px;
   /* Allow for Header */
 
   font-size: 13px;
